--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,8 +15,8 @@
                     </div>
                 </div>
             </li>
-            <li class="navimg"><a href="https://github.com/NCX-Programming" target="_blank"><img src="/files/site/images/github64px.png" style="width:32px;height:32px;"/></a></li>
-            <li class="navimg"><a href="https://discord.gg/TbPXuFr" target="_blank"><img src="/files/site/images/discord.png" style="width:30px;height:32px;"/></a></li>
+            <li class="navimg"><a href="https://github.com/NCX-Programming" target="_blank"><img src="https://cdn.ncxprogramming.com/file/image/navbar/github64px.png" style="width:32px;height:32px;"/></a></li>
+            <li class="navimg"><a href="https://discord.gg/TbPXuFr" target="_blank"><img src="https://cdn.ncxprogramming.com/file/image/navbar/discord.png" style="width:30px;height:32px;"/></a></li>
         </ul>
     </nav>
 </div>
